# RustS2T

./: .gitignore  Cargo.toml  README.md
src/: audio.rs  main.rs  speech_recognition.rs
static/: index.html
