[package]
name = "rust_stt"
version = "0.1.0"
edition = "2021"

[dependencies]
vosk = "0.2.0"
cpal = "0.15.2"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
tokio-stream = "0.1"
tracing = "0.1"
